# hole-filling-small-library

./: CMakeLists.txt  CmdUtility.cpp  CmdUtility.h  README.md  main.cpp
src/exceptions/: EmptyImage.cpp  EmptyImage.h  IllegalEpsilon.cpp  IllegalEpsilon.h  IllegalPixelConnectivity.cpp  IllegalPixelConnectivity.h  IllegalZ.cpp  IllegalZ.h  SizeMismatch.cpp  SizeMismatch.h
src/filler/: DefaultFillingStrategy.cpp  DefaultFillingStrategy.h  FillingStrategy.h  HoleFiller.cpp  HoleFiller.h
src/image/: GrayscaleImage.cpp  GrayscaleImage.h  HoleFillingImage.h
src/image/pixel/: Pixel.h  PixelConnectivity.cpp  PixelConnectivity.h
src/utils/: ImageUtil.cpp  ImageUtil.h
src/weightfunction/: EuclideanDistance.cpp  EuclideanDistance.h  WeightFunction.h
tests/: RunTests.cpp  RunTests.h
tests/filler_test/: FillerTest.cpp  FillerTest.h
tests/image_test/: GrayscaleImageTest.cpp  GrayscaleImageTest.h  PixelConnectivityTest.cpp  PixelConnectivityTest.h
tests/utils_test/: ImageUtilTest.cpp  ImageUtilTest.h
tests/weightfunction_test/: EucledianDistanceTest.cpp  EucledianDistanceTest.h
